tests/errors/typechecker/require_const_int_but_give_dynamic_int.duck
fn dynamic_int() -> Int {
    return 5;
}

fn main() {
    let x: 1 = dynamic_int();
}
